--- a/frontend/src/css/login.css
+++ b/frontend/src/css/login.css
@@ -4,6 +4,8 @@
     margin: 0px; 
     padding: 0px; 
     box-sizing: border-box;
+    font-weight: 600; /* Semibold */
+    font-size: 18px; 
 }
 
 
@@ -35,7 +37,6 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 p {
-    font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
@@ -102,15 +103,12 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
 .txt1 {
-  font-family: Poppins-Regular;
-  font-size: 13px;
   line-height: 1.5;
   color: #999999;
 }
 
 .txt2 {
-  font-family: Poppins-Regular;
-  font-size: 13px;
+
   line-height: 1.5;
   color: #666666;
 }
@@ -137,10 +135,11 @@ iframe {
   align-items: center;
   padding: 15px;
   background: #9053c7;
-  background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
-  background: linear-gradient(-135deg, #c850c0, #4158d0);
+  background: -webkit-gradient(linear, left bottom, right top, from(#ebf3f7), to(#c03239));
+  background: -webkit-linear-gradient(bottom left, #08aeea 0%, #b721ff 100%);
+  background: -moz-linear-gradient(bottom left, #08aeea 0%, #b721ff 100%);
+  background: -o-linear-gradient(bottom left, #08aeea 0%, #b721ff 100%);
+  background: linear-gradient(to top right, #d11212 0%, #c00f7c 100%);
 }
 
 .wrap-login100 {
@@ -167,8 +166,8 @@ iframe {
 }
 
 .login100-form-title {
-  font-family: Poppins-Bold;
-  font-size: 24px;
+  font-weight: 600; /* Semibold */
+    font-size: 30px; 
   color: #333333;
   line-height: 1.2;
   text-align: center;
@@ -188,8 +187,7 @@ iframe {
 }
 
 .input100 {
-  font-family: Poppins-Medium;
-  font-size: 15px;
+  
   line-height: 1.5;
   color: #666666;
 
@@ -281,8 +279,7 @@ iframe {
 }
 
 .login100-form-btn {
-  font-family: Montserrat-Bold;
-  font-size: 15px;
+
   line-height: 1.5;
   color: #fff;
   text-transform: uppercase;
