--- a/frontend/src/css/menu.css
+++ b/frontend/src/css/menu.css
@@ -3,7 +3,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 20px;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
 }
 
 .menu-item {
@@ -139,4 +139,22 @@
 
 .cart h2 {
     border-bottom: 2px solid black;
+}
+
+.foot{
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
+    justify-content: center;
+    flex-direction: row;
+}
+
+.sche{
+    background-color: #fff8e1;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+    width: 300px;
+    height: 150px;
 }
